[package]
name = "my_bevy_game"
version = "0.1.0"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["serialize"] }
rand = "0.7.3"
# bevy = { git = "https://github.com/bevyengine/bevy" }
serde = "1.0.116"